WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305445
[CI Filters] Fix filter inputs for CSS reference filters
https://bugs.webkit.org/show_bug.cgi?id=305445
Summary
[CI Filters] Fix filter inputs for CSS reference filters
Simon Fraser (smfr)
Reported
2026-01-13 20:33:58 PST
The Core Image filter code path often has missing content when used from CSS.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-13 20:34:05 PST
<
rdar://problem/168115994
>
Simon Fraser (smfr)
Comment 2
2026-01-13 20:44:37 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56537
EWS
Comment 3
2026-01-14 08:05:00 PST
Committed
305576@main
(6452c2456b24): <
https://commits.webkit.org/305576@main
> Reviewed commits have been landed. Closing PR #56537 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug