[CI Filters] Fix filter inputs for CSS reference filters https://bugs.webkit.org/show_bug.cgi?id=305445 rdar://168115994

Reviewed by Mike Wyrzykowski.

When SVG filters are referenced from CSS, there's a chain of two SourceGraphic inputs,
so the SourceGraphicCoreImageApplier needs to handle a CI image coming from the previous
one. The second one just acts as a pass-through for now (in future it may have to adjust
geometry).

* Source/WebCore/platform/graphics/coreimage/SourceGraphicCoreImageApplier.mm:
(WebCore::SourceGraphicCoreImageApplier::apply const):

Canonical link: https://commits.webkit.org/305576@main