Source/WebCore/platform/graphics/coreimage/SourceGraphicCoreImageApplier.mm
@@ -44,24 +44,26 @@ WTF_MAKE_TZONE_ALLOCATED_IMPL(SourceGraphicCoreImageApplier);
 bool SourceGraphicCoreImageApplier::apply(const Filter& filter, std::span<const Ref<FilterImage>> inputs, FilterImage& result) const
 {
     BEGIN_BLOCK_OBJC_EXCEPTIONS
-    auto& input = inputs[0].get();
+    Ref input = inputs[0].get();
 
-    RefPtr sourceImage = input.imageBuffer();
-    if (!sourceImage)
-        return false;
+    RetainPtr image = input->ciImage();
+    if (!image) {
+        RefPtr sourceImage = input->imageBuffer();
+        if (!sourceImage)
+            return false;
 
-    RetainPtr<CIImage> image;
-    if (auto surface = sourceImage->surface())
-        image = [CIImage imageWithIOSurface:surface->surface()];
-    else
-        image = [CIImage imageWithCGImage:sourceImage->copyNativeImage()->platformImage().get()];
+        if (auto surface = sourceImage->surface())
+            image = [CIImage imageWithIOSurface:surface->surface()];
+        else
+            image = [CIImage imageWithCGImage:sourceImage->copyNativeImage()->platformImage().get()];
+
+        auto offset = filter.flippedRectRelativeToAbsoluteEnclosingFilterRegion(result.absoluteImageRect()).location();
+        if (!offset.isZero())
+            image = [image imageByApplyingTransform:CGAffineTransformMakeTranslation(offset.x(), offset.y())];
+    }
 
     if (!image)
         return false;
-
-    auto offset = filter.flippedRectRelativeToAbsoluteEnclosingFilterRegion(result.absoluteImageRect()).location();
-    if (!offset.isZero())
-        image = [image imageByApplyingTransform:CGAffineTransformMakeTranslation(offset.x(), offset.y())];
 
     result.setCIImage(WTF::move(image));
     return true;
